# Tools

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.txt
cmake/: FindGetText.cmake  FindGettext.cmake  FindSphinx.cmake  UseBreatheDoc.cmake  UseGettext.cmake  UseSphinxDoc.cmake
doc/: Doxyfile.in  conf.py.in  index.rst
grep/: CMakeLists.txt
head/: CMakeLists.txt  main.cpp
head_and_teal/: CMakeLists.txt  common.h  head.cpp  tail.cpp
include/: Config.h.in  Utils.h
reboot/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  agrep.cpp  anslookup.cpp  bing_wallpaper.cpp  cppname.cpp  grep.cpp  head.cpp  reboot.cpp  xsel.cpp  xxd.cpp
src/lib/: CMakeLists.txt  DnsQuery.cpp  DnsQuery.h  base64.h
teal/: CMakeLists.txt  main.cpp
xsel/: CMakeLists.txt  main.cpp  readme.md
xxd/: CMakeLists.txt  ReadMe.md  main.cpp
